@@ -29,9 +29,11 @@ permittedValues = matrix(c(
   'temperature', .025, 0, 1, .025,
   'maleFemale', 0, -1, 1, 0.1,
   'creakyBreathy', 0, -1, 1, 0.1,
-  'nonlinBalance', 0, 0, 100, 1,
-  'nonlinDep', 50, 0, 100, 1,
-  'jitterDep', 1, 0, 24, 0.1,
+  'nonlinBalance', 100, 0, 100, 1,
+  'subFreq', 100, 10, 1000, 10,
+  'subDep', 0, 0, 500, 10,
+  'shortestEpoch', 300, 50, 500, 25,
+  'jitterDep', 0, 0, 24, 0.1,
   'jitterLen', 1, 1, 100, 1,
   'vibratoFreq', 5, 1, 20, .5,
   'vibratoDep', 0, 0, 3, 0.125,
@@ -51,9 +53,6 @@ permittedValues = matrix(c(
   'formantDepStoch', 20, 0, 40, 5,
   'formantWidth', 1, .1, 10, .1,
   'formantCeiling', 2, 1, 20, .1,
-  'subFreq', 100, 10, 1000, 10,
-  'subDep', 100, 0, 500, 10,
-  'shortestEpoch', 300, 50, 500, 25,
   'amDep', 0, 0, 100, 5,
   'amFreq', 30, 1, 100, 1,
   'amShape', 0, -1, 1, .025,
@@ -98,9 +97,11 @@ defaults = list(
   temperature = 0.025,
   maleFemale = 0,
   creakyBreathy = 0,
-  nonlinBalance = 0,
-  nonlinDep = 50,
-  jitterDep = 1,
+  nonlinBalance = 100,
+  subFreq = 100,
+  subDep = 0,
+  shortestEpoch = 300,
+  jitterDep = 0,
   jitterLen = 1,
   vibratoFreq = 5,
   vibratoDep = 0,
@@ -118,9 +119,6 @@ defaults = list(
   formantDep = 1,
   formantDepStoch = 20,
   formantWidth = 1,
-  subFreq = 100,
-  subDep = 100,
-  shortestEpoch = 300,
   amDep = 0,
   amFreq = 30,
   amShape = 0,
